unpackaged/main/default/objects/LiveChatTranscript/fields/Ada_Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>Ada_Conversation_ID__c</fullName>
    <externalId>true</externalId>
    <label>Ada Conversation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>