unpackaged/main/default/objects/LiveChatTranscript/fields/Brokerage_Partner__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Partner__c</fullName>
    <label>Brokerage Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>