unpackaged/main/default/objects/LiveChatTranscript/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <label>Company ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>