unpackaged/main/default/objects/LiveChatTranscript/fields/Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Title__c</fullName>
    <label>Page Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>