unpackaged/main/default/objects/LiveChatTranscript/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>