unpackaged/main/default/objects/LiveChatTranscript/fields/URL_Path__c.field-meta.xml
<CustomField>
    <fullName>URL_Path__c</fullName>
    <label>URL Path</label>
    <type>Url</type>
</CustomField>