unpackaged/main/default/objects/LiveChatTranscript/listViews/Ada_Support_Team_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Ada_Support_Team_LiveChatTranscript</fullName>
    <columns>Contact</columns>
    <columns>Name</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <label>Ada Support Team</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>