unpackaged/main/default/objects/LiveChatTranscript/listViews/Chat_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Chat_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat - Support</label>
    <queue>Chat</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>