unpackaged/main/default/objects/LiveChatTranscript/listViews/Chat_New_Hire_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Chat_New_Hire_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat - New Hire</label>
    <queue>Chat_New_Hire</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>