unpackaged/main/default/objects/LiveChatTranscript/listViews/Chats_by_Agent.listView-meta.xml
<ListView>
    <fullName>Chats_by_Agent</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <label>Chats by Agent</label>
</ListView>