unpackaged/main/default/objects/LiveChatTranscript/listViews/Lexi_Chat_Transcripts.listView-meta.xml
<ListView>
    <fullName>Lexi_Chat_Transcripts</fullName>
    <columns>Contact</columns>
    <columns>Name</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner</field>
        <operation>equals</operation>
        <value>AReed</value>
    </filters>
    <label>Lexi Chat Transcripts</label>
</ListView>