unpackaged/main/default/objects/LiveChatTranscript/listViews/Seany_s_Chats.listView-meta.xml
<ListView>
    <fullName>Seany_s_Chats</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>Owner</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>5/14/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Seany&#39;s Chats</label>
</ListView>