unpackaged/main/default/objects/LiveChatTranscript/listViews/Support_Team_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Support_Team_LiveChatTranscript</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>Owner</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>2/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>1,5</value>
    </filters>
    <label>Support Team</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>